# parsec

./: .gitignore  .travis.yml  CHANGES  ChangeLog.md  README.md  cabal.haskell-ci  parsec.cabal
.github/workflows/: haskell-ci.yml  mhs-ci.yml
Text/: Parsec.hs
Text/Parsec/: Char.hs  Combinator.hs  Error.hs  Expr.hs  Language.hs  Perm.hs  Pos.hs  Prim.hs  Text.hs  Token.hs
Text/Parsec/Text/: Lazy.hs
Text/ParserCombinators/Parsec/: Expr.hs
src/Text/: Parsec.hs
src/Text/Parsec/: ByteString.hs  Char.hs  Combinator.hs  Error.hs  Expr.hs  Language.hs  Perm.hs  Pos.hs  Prim.hs  String.hs  Text.hs  Token.hs
src/Text/Parsec/ByteString/: Lazy.hs
src/Text/Parsec/Text/: Lazy.hs
src/Text/ParserCombinators/Parsec/: Expr.hs
test/: Bugs.hs  Features.hs  Main.hs  issue121.hs  issue127.hs  issue171.hs  issue175.hs
test/Bugs/: Bug179.hs  Bug2.hs  Bug35.hs  Bug6.hs  Bug9.hs
test/Features/: Feature150.hs  Feature80.hs
